--- a/main.html
+++ b/main.html
@@ -8,6 +8,67 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="page">
+
+    <!-- Image Container -->
+    <div class="imageContainer">
+      <img src="https://tse2.mm.bing.net/th/id/OIP.tOl-8iBiH93snu5nDdWNHQHaEl?w=1536&h=952&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Architecture Image">
+    </div>
+
+    <!-- Table Layout -->
+    <table>
+
+      <!-- Row 1 -->
+      <tr>
+        <td class="col-image">
+          <img src="https://via.placeholder.com/200x150?text=Building+1" alt="Building">
+        </td>
+
+        <td class="col-text">
+          <h2>Modern Architecture</h2>
+          <p>
+            Modern architecture emphasizes clean lines, open spaces, and functional
+            design. It often uses materials such as glass, steel, and concrete to
+            create simple yet powerful forms.
+          </p>
+        </td>
+
+        <td class="col-image">
+          <img src="https://via.placeholder.com/200x150?text=Interior+Design" alt="Interior">
+        </td>
+      </tr>
+
+      <!-- Row 2 -->
+      <tr>
+        <td class="col-image">
+          <img src="https://via.placeholder.com/200x150?text=Sketch" alt="Architecture Sketch">
+        </td>
+
+        <td class="col-text">
+          <h2>Architectural Planning</h2>
+          <p>
+            Architectural planning focuses on space efficiency, aesthetics, and
+            sustainability. Floor plans help visualize room layouts and guide the
+            construction process.
+          </p>
+        </td>
+
+        <td class="col-image">
+          <img src="https://via.placeholder.com/200x150?text=Structure" alt="Structure">
+        </td>
+      </tr>
+
+    </table>
+
+  </div>
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
